Add Herotomb event

--- a/explore.html
+++ b/explore.html
@@ -152,8 +152,8 @@
     <!--field explore minimap and battle js-->
     <script src="assets/js/explore.js"></script>
     <script src="assets/js/battle.js"></script>
-    <!--minigame-->
-    <script src="assets/js/minigames.js"></script>
+    <!-- minigame
+    <script src="assets/js/minigames.js"></script> -->
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/128240b0e7.js" crossorigin="anonymous"></script>
 
