--- a/boatMap.html
+++ b/boatMap.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="-">
     <meta name="keywords" content="dice, game, rpg, roleplay, story, mini-games, fighting">
-    <title>Document</title>
+    <title>Legend of the Eternal Empire: Sea's of Erran</title>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -19,9 +19,9 @@
 
 <body class="d-flex flex-column min-vh-200" id="main-map">
     <!-- bootstrap navbar -->
-    <nav class="navbar bg-body-tertiary navbar-custom">
+    <nav class="navbar bg-body-tertiary navbar-custom fixed-top">
         <div class="container-fluid d-flex justify-content-center">
-            <span class="navbar-brand mb-0 h1">title</span>
+            <span class="navbar-brand mb-0 h1">Legend of the Eternal Empire: Sea's of Erran</span>
         </div>
     </nav>
     <main>
@@ -32,95 +32,94 @@
                 </div>
             </div>
 
-            <div class="container controls-area inner" id="icons">
+            <div class="container controls-area section inner d-flex justify-content-center">
                 <button data-type="quest" class="btn btn--big" data-bs-toggle="modal" type="submit"
                     id="combat-start-btn">
                     <i class="fa-regular fa-square fa-fade" style="color: #f3e9a9;"></i>
                 </button>
-
             </div>
         </div>
-            <!-- Combat Modal -->
-            <div class="combat-modal" id="combat-modal">
-                <div class="combat-modal-content">
-                    <span class="combat-close-btn" id="combat-close-modal">&times;</span>
-                    <div class="combat-status">
-                        <h1>Turn-Based RPG Combat</h1>
-                        <p id="combat-message">Battle begins! It's your turn!</p>
+        <!-- Combat Modal -->
+        <div class="combat-modal" id="combat-modal">
+            <div class="combat-modal-content">
+                <span class="combat-close-btn" id="combat-close-modal">&times;</span>
+                <div class="combat-status">
+                    <h1>Turn-Based RPG Combat</h1>
+                    <p id="combat-message">Battle begins! It's your turn!</p>
+                </div>
+                <div class="combat-health-bars">
+                    <div class="combat-health-bar">
+                        <h2>Player</h2>
+                        <div class="combat-health" id="combat-player-health"></div>
+                        <p id="combat-player-hp">HP: 100</p>
                     </div>
-                    <div class="combat-health-bars">
-                        <div class="combat-health-bar">
-                            <h2>Player</h2>
-                            <div class="combat-health" id="combat-player-health"></div>
-                            <p id="combat-player-hp">HP: 100</p>
-                        </div>
-                        <div class="combat-health-bar">
-                            <h2>Enemy</h2>
-                            <div class="combat-health" id="combat-enemy-health"></div>
-                            <p id="combat-enemy-hp">HP: 100</p>
-                        </div>
-                    </div>
-                    <div class="combat-actions">
-                        <button id="combat-attack-btn">Attack</button>
-                        <button id="combat-heal-btn">Heal</button>
+                    <div class="combat-health-bar">
+                        <h2>Enemy</h2>
+                        <div class="combat-health" id="combat-enemy-health"></div>
+                        <p id="combat-enemy-hp">HP: 100</p>
                     </div>
                 </div>
-            </div>
-            <!-- Minigame Modals-->
-            <div class="minigame" id="game1">
-                <div class="minigame-content">
-                    <div class="guess-wrapper">
-                        <section id="guess-section">Guess a number from 1 to 100</section>
-                        <p class="guess"></p>
-                        <div class="guess-input-field">
-                            <input class="guess-input" type="number" />
-                            <button class="guess-btn">Check</button>
-                        </div>
-                        <p>You have <span class="guess-chances">10</span> chances</p>
-                    </div>
-                    <button class="close-btn">Close</button>
+                <div class="combat-actions">
+                    <button id="combat-attack-btn">Attack</button>
+                    <button id="combat-heal-btn">Heal</button>
                 </div>
             </div>
-
-            <div class="minigame" id="game2">
-                <section class="rps-container">
-                    <div class="rps-result_field">
-                        <div class="rps-result_images">
-                            <span class="rps-user_result">
-                                <img src="images/rock.png" alt="" />
-                            </span>
-                            <span class="rps-cpu_result">
-                                <img src="images/rock.png" alt="" />
-                            </span>
-                        </div>
-                        <div class="rps-result">Play</div>
+        </div>
+        <!-- Minigame Modals-->
+        <div class="minigame" id="game1">
+            <div class="minigame-content">
+                <div class="guess-wrapper">
+                    <section id="guess-section">Guess a number from 1 to 100</section>
+                    <p class="guess"></p>
+                    <div class="guess-input-field">
+                        <input class="guess-input" type="number" />
+                        <button class="guess-btn">Check</button>
                     </div>
-                    <div class="rps-option_images">
-                        <span class="rps-option_image">
-                            <img src="images/rock.png" alt="" />
-                            <p>Rock</p>
-                        </span>
-                        <span class="rps-option_image">
-                            <img src="images/paper.png" alt="" />
-                            <p>Paper</p>
-                        </span>
-                        <span class="rps-option_image">
-                            <img src="images/scissors.png" alt="" />
-                            <p>Scissors</p>
-                        </span>
-                    </div>
-                </section>
-
+                    <p>You have <span class="guess-chances">10</span> chances</p>
+                </div>
                 <button class="close-btn">Close</button>
             </div>
+        </div>
+
+        <div class="minigame" id="game2">
+            <section class="rps-container">
+                <div class="rps-result_field">
+                    <div class="rps-result_images">
+                        <span class="rps-user_result">
+                            <img src="images/rock.png" alt="" />
+                        </span>
+                        <span class="rps-cpu_result">
+                            <img src="images/rock.png" alt="" />
+                        </span>
+                    </div>
+                    <div class="rps-result">Play</div>
+                </div>
+                <div class="rps-option_images">
+                    <span class="rps-option_image">
+                        <img src="images/rock.png" alt="" />
+                        <p>Rock</p>
+                    </span>
+                    <span class="rps-option_image">
+                        <img src="images/paper.png" alt="" />
+                        <p>Paper</p>
+                    </span>
+                    <span class="rps-option_image">
+                        <img src="images/scissors.png" alt="" />
+                        <p>Scissors</p>
+                    </span>
+                </div>
+            </section>
+
+            <button class="close-btn">Close</button>
+        </div>
     </main>
-    <footer class="mt-auto">
+    <!-- <footer class="mt-auto">
         <div class="container d-flex justify-content-center">
             <button data-type="back" class="btn btn--big" type="submit" id="backButton">
                 <i class="fa-solid fa-circle-left" style="color: #330000;"></i>
             </button>
         </div>
-    </footer>
+    </footer> -->
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
