--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="-">
     <meta name="keywords" content="dice, game, rpg, roleplay, story, mini-games, fighting">
-    <title>Document</title>
+    <title>Legend of the Eternal Empire</title>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -19,7 +19,7 @@
     <!-- bootstrap navbar -->
     <nav class="navbar bg-body-tertiary navbar-custom fixed-top">
         <div class="container-fluid d-flex justify-content-center">
-            <span class="navbar-brand mb-0 h1">title</span>
+            <span class="navbar-brand mb-0 h1">Legend of the Eternal Empire</span>
         </div>
     </nav>
     <main>
