add name attributes to buttons for accesibility

--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
             </div>
 
             <div class="container controls-area section inner d-flex justify-content-center">
-                <button data-type="boat" class="btn btn--big" type="submit" id="boat">
+                <button name="boat" data-type="boat" class="btn btn--big" type="submit" id="boat">
                     <i class="fa-solid fa-sailboat fa-bounce" style="color: #497a7e;"></i>
                 </button>
-                <button data-type="tree" class="btn btn--big" type="submit" id="tree">
+                <button name="tree" data-type="tree" class="btn btn--big" type="submit" id="tree">
                     <i class="fa-solid fa-tree fa-bounce" style="color: #3a5f3d;"></i>
                 </button>
-                <button data-type="mountain" class="btn btn--big" type="submit" id="mountain">
+                <button name="mountain" data-type="mountain" class="btn btn--big" type="submit" id="mountain">
                     <i class="fa-solid fa-mountain-sun fa-bounce" style="color: #6a7b8d;"></i>
                 </button>
-                <button data-type="fort" class="btn btn--big" type="submit" id="fort">
+                <button name="fort" data-type="fort" class="btn btn--big" type="submit" id="fort">
                     <i class="fa-brands fa-fort-awesome fa-bounce" style="color: #8b4327;"></i>
                 </button>
-                <button data-type="skull" class="btn btn--big" type="submit" id="skull">
+                <button name="skull" data-type="skull" class="btn btn--big" type="submit" id="skull">
                     <i class="fa-solid fa-skull-crossbones fa-bounce" style="color: #0e110f;"></i>
                 </button>
             </div>
