--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div>
             <div class="container section inner background">
                 <div class="row">
-                    <img src="assets/images/main-map.png" alt="main-map" class="img-fluid">
+                    <img src="assets/images/main-map.png" alt="main-map" class="img-fluid" fetchpriority="high">
                 </div>
             </div>
 
