--- a/index.html
+++ b/index.html
@@ -11,15 +11,20 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/minigames.css">
+    <link rel="stylesheet" href="assets/css/combat.css">
     <link rel="stylesheet" href="assets/css/style.css">
 
 </head>
 
 <body class="d-flex flex-column min-vh-200" id="main-map">
     <!-- bootstrap navbar -->
-    <nav class="navbar bg-body-tertiary navbar-custom fixed-top">
-        <div class="container-fluid d-flex justify-content-center">
-            <span class="navbar-brand mb-0 h1">Legend of the Eternal Empire</span>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary navbar-custom">
+        <div class="container-fluid">
+            <h1>Legend of the Eternal Empire</h1>
+            <button type="button" data-bs-toggle="modal" data-bs-target="#storyModal">
+                <i class="fa-solid fa-book-open" style="color: #330000;"></i>
+            </button>
         </div>
     </nav>
     <main>
@@ -48,14 +53,26 @@
                 </button>
             </div>
         </div>
-    </main>
-    <!-- <footer>
-        <div class="container d-flex justify-content-center">
-            <button data-type="back" class="btn btn--big" type="submit" id="backButton">
-                <i class="fa-solid fa-circle-left" style="color: #330000;"></i>
-            </button>
+        <!-- Story Modal -->
+        <div class="modal fade" id="storyModal" tabindex="-1" aria-labelledby="storyModal" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h2 class="modal-title fs-5" id="storyModal">Legend of the Eternal Empire</h2>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <p>Tasked with hunting down the army know as "The Eternal Empire", you follow their tracks to this new land - Erran.
+                            New to you and your crew, you must explore the land and gather information on the army's whereabouts while putting your sword arm to the test against these new foes.
+                        </p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" data-bs-dismiss="modal">Exit</button>
+                    </div>
+                </div>
+            </div>
         </div>
-    </footer> -->
+    </main>
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
