Add new boss picture and chores

--- a/explore.html
+++ b/explore.html
@@ -20,7 +20,7 @@
     <!-- bootstrap navbar -->
     <nav class="navbar bg-body-tertiary navbar-custom fixed-top">
         <div class="container-fluid d-flex justify-content-center">
-            <span class="navbar-brand mb-0 h1">Explore</span>
+            <span class="navbar-brand mb-0 h1">Last Episode</span>
         </div>
     </nav>
     <main>
