--- a/explore.html
+++ b/explore.html
@@ -28,7 +28,7 @@
         <section class="mt-5" aria-label="exploring area">
             <div class="container d-flex justify-content-center">
                 <div class="carousel col-12 col-md-8 col-lg-5">
-                    <img src="" alt="Carousel Image" class="carousel-image active">
+                    <img src="assets/images/bosscastle/5 puzzle 1.png" alt="Carousel Image" class="carousel-image active">
                     <button class="carousel-button" id="carousel-left">&#8656;</button>
                     <button class="carousel-button" id="carousel-right">&#8658;</button>
                     <button class="carousel-button" id="carousel-up">&#8657;</button>
@@ -79,26 +79,26 @@
                             <div class="rps-result_field">
                                 <div class="rps-result_images">
                                     <span class="rps-user_result">
-                                        <img src="assets/minigame-images/rps-images/rock.png" alt="rock" />
+                                        <img src="assets/minigame-images/rps-images/rock.png" alt="rock">
                                     </span>
                                     <span class="rps-cpu_result">
-                                        <img src="assets/minigame-images/rps-images/rock.png" alt="rock" />
+                                        <img src="assets/minigame-images/rps-images/rock.png" alt="rock">
                                     </span>
                                 </div>
                                 <div class="rps-result">Play</div>
                             </div>
                             <div class="rps-option_images">
                                 <span class="rps-option_image">
-                                    <img src="assets/minigame-images/rps-images/rock.png" alt="rock" />
-                                    <p>Rock</p>
+                                    <img src="assets/minigame-images/rps-images/rock.png" alt="rock">
+                                    </span>Rock</span>
                                 </span>
                                 <span class="rps-option_image">
-                                    <img src="assets/minigame-images/rps-images/paper.png" alt="paper" />
-                                    <p>Paper</p>
+                                    <img src="assets/minigame-images/rps-images/paper.png" alt="paper">
+                                    <span>Paper</span>
                                 </span>
                                 <span class="rps-option_image">
-                                    <img src="assets/minigame-images/rps-images/scissors.png" alt="scissors" />
-                                    <p>Scissors</p>
+                                    <img src="assets/minigame-images/rps-images/scissors.png" alt="scissors">
+                                    <span>Scissors</span>
                                 </span>
                             </div>
                         </section>
