--- a/battle.html
+++ b/battle.html
@@ -9,7 +9,7 @@ for pair programming ask Jeff Chen 29/11/2024-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="-">
     <meta name="keywords" content="dice, game, rpg, roleplay, story, mini-games, fighting">
-    <title>Document</title>
+    <title>Battle</title>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -41,10 +41,11 @@ for pair programming ask Jeff Chen 29/11/2024-->
                         <div class="d-flex align-items-center">
                             <span class="me-2">Enemy HP:</span>
                             <div class="progress w-100">
-                                <div class="progress-bar bg-danger" role="progressbar" style="width: 100%;" aria-valuenow="100"
-                                    aria-valuemin="0" aria-valuemax="100" id="enemyHpBar"></div>
-                                <div class="progress-bar bg-primary" role="progressbar" style="width: 0%;" aria-valuenow="0"
-                                    aria-valuemin="0" aria-valuemax="100" id="enemyReducedHpBar"></div>
+                                <div class="progress-bar bg-danger" role="progressbar" style="width: 100%;"
+                                    aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" id="enemyHpBar"></div>
+                                <div class="progress-bar bg-primary" role="progressbar" style="width: 0%;"
+                                    aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" id="enemyReducedHpBar">
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -53,10 +54,10 @@ for pair programming ask Jeff Chen 29/11/2024-->
                         <div class="d-flex align-items-center">
                             <span class="me-2">HP:</span>
                             <div class="progress w-100">
-                                <div class="progress-bar bg-danger" role="progressbar" style="width: 100%;" aria-valuenow="100"
-                                    aria-valuemin="0" aria-valuemax="100" id="heroHpBar"></div>
-                                <div class="progress-bar bg-primary" role="progressbar" style="width: 0%;" aria-valuenow="0"
-                                    aria-valuemin="0" aria-valuemax="100" id="heroReducedHpBar"></div>
+                                <div class="progress-bar bg-danger" role="progressbar" style="width: 100%;"
+                                    aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" id="heroHpBar"></div>
+                                <div class="progress-bar bg-primary" role="progressbar" style="width: 0%;"
+                                    aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" id="heroReducedHpBar"></div>
                             </div>
                         </div>
                         <div class="d-flex align-items-center mt-2">
@@ -73,7 +74,8 @@ for pair programming ask Jeff Chen 29/11/2024-->
                     <button id="defButton"
                         class="btn btn-secondary position-absolute top-50 start-0 translate-middle-y">DEF</button>
                     <button id="healButton"
-                        class="btn btn-success position-absolute top-50 end-0 translate-middle-y">Heal<br><span>x</span><span id="potionCount">20</span></button>
+                        class="btn btn-success position-absolute top-50 end-0 translate-middle-y">Heal<br><span>x</span><span
+                            id="potionCount">20</span></button>
                     <button id="fleeButton"
                         class="btn btn-warning position-absolute bottom-0 start-50 translate-middle-x">Flee</button>
                     <img src="assets/images/battle/knight-s.png" alt="Hero" class="position-absolute bottom-0 start-0">
@@ -108,5 +110,4 @@ for pair programming ask Jeff Chen 29/11/2024-->
     <script src="https://kit.fontawesome.com/128240b0e7.js" crossorigin="anonymous"></script>
 
 </body>
-
 </html>
