--- a/explore.html
+++ b/explore.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="-">
     <meta name="keywords" content="dice, game, rpg, roleplay, story, mini-games, fighting">
-    <title>Document</title>
+    <title>Explore</title>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -28,14 +28,15 @@
         <section class="mt-5" aria-label="exploring area">
             <div class="container d-flex justify-content-center">
                 <div class="carousel col-12 col-md-8 col-lg-5">
-                    <img src="assets/images/bosscastle/5 puzzle 1.png" alt="Carousel Image" class="carousel-image active">
+                    <img src="assets/images/bosscastle/5-puzzle-1.png" alt="Carousel Image"
+                        class="carousel-image active">
                     <button class="carousel-button" id="carousel-left">&#8656;</button>
                     <button class="carousel-button" id="carousel-right">&#8658;</button>
                     <button class="carousel-button" id="carousel-up">&#8657;</button>
                     <button class="carousel-button" id="carousel-down">&#8659;</button>
                 </div>
             </div>
-           
+
             <div class="d-flex justify-content-center mt-1">
                 <div class="mini-map">
                     <div class="mini-map-grid">
@@ -66,7 +67,7 @@
                 <button class="btn btn-secondary ms-2" id="test-rps-button">Test RPS Game</button>
                 <button class="btn btn-secondary ms-2" id="test-hangman-button">Test Hangman Game</button>
             </div>
-        </section> 
+        </section>
         <div class="modal fade" id="rps-minigame" tabindex="-1" aria-labelledby="rps-minigame-label" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
@@ -76,6 +77,7 @@
                     </div>
                     <div class="modal-body">
                         <section class="rps-container">
+                            <h2>Rock Paper Scissors</h2>
                             <div class="rps-result_field">
                                 <div class="rps-result_images">
                                     <span class="rps-user_result">
@@ -90,7 +92,7 @@
                             <div class="rps-option_images">
                                 <span class="rps-option_image">
                                     <img src="assets/minigame-images/rps-images/rock.png" alt="rock">
-                                    </span>Rock</span>
+                                    <span>Rock</span>
                                 </span>
                                 <span class="rps-option_image">
                                     <img src="assets/minigame-images/rps-images/paper.png" alt="paper">
@@ -109,7 +111,8 @@
                 </div>
             </div>
         </div>
-        <div class="modal fade" id="hangman-minigame" tabindex="-1" aria-labelledby="hangman-minigame-label" aria-hidden="true">
+        <div class="modal fade" id="hangman-minigame" tabindex="-1" aria-labelledby="hangman-minigame-label"
+            aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -118,10 +121,11 @@
                     </div>
                     <div class="modal-body">
                         <div class="guess-wrapper">
-                            <section id="guess-section">Guess a number from 1 to 100</section>
+                            <div id="guess-section">Guess a number from 1 to 100</div>
+
                             <p class="guess"></p>
                             <div class="guess-input-field">
-                                <input class="guess-input" type="number" />
+                                <input class="guess-input" type="number">
                                 <button class="guess-btn">Check</button>
                             </div>
                             <p>You have <span class="guess-chances">10</span> chances</p>
@@ -141,13 +145,11 @@
             </button>
         </div>
 
-        
-
     </footer>
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
-    </script>
+        </script>
     <script src="assets/js/script.js"></script>
     <!--field explore minimap and battle js-->
     <script src="assets/js/explore.js"></script>
