Finished the blurbs

--- a/castleMap.html
+++ b/castleMap.html
@@ -125,7 +125,9 @@
                     </div>
                     <div class="modal-body">
                         <p>
-                            --- Story ---
+                            Castle Urgot is the last bastion of the Eternal Empire. The castle is heavily fortified and
+                            screams echo from inside. The army of the Eternal Empire is preparing for war. You must
+                            defeat the army and bring peace to the land of Erran. But now, now you seek revenge for your fallen comrades.
                         </p>
                     </div>
                     <div class="modal-footer">
