--- a/forestMap.html
+++ b/forestMap.html
@@ -125,7 +125,10 @@
                     </div>
                     <div class="modal-body">
                         <p>
-                            --- Story ---
+                            Pulling yourself from the waters, you find yourself in a dense forest. With little time to
+                            recover from the terrors of the waters, you must now face the dangers of the forest. The
+                            trees whisper to you, the shadows move, and the sounds of the forest are not what they seem.
+                            You must find your way through the forest, your army awaits you on the other side.
                         </p>
                     </div>
                     <div class="modal-footer">
