--- a/mountainMap.html
+++ b/mountainMap.html
@@ -125,7 +125,11 @@
                     </div>
                     <div class="modal-body">
                         <p>
-                            --- Story ---
+                            Leaving the forest behind you, you find what remains of your soldiers. Engulfed in fear, one
+                            points toward the mountains. The Mountains of Isandul are a treacherous place, filled with
+                            dangerous creatures and
+                            bandits. You must be careful as you traverse the mountains, for danger lurks around every
+                            corner. You're close, you can feel it.
                         </p>
                     </div>
                     <div class="modal-footer">
