made sure the webps were connected correctly

--- a/boatMap.html
+++ b/boatMap.html
@@ -31,7 +31,7 @@
         <div>
             <div class="container section inner background">
                 <div class="row">
-                    <img src="assets/images/boatScene.png" alt="main-map" class="img-fluid">
+                    <img src="assets/images/boatScene.webp" alt="main-map" class="img-fluid">
                 </div>
             </div>
 
